# PHI-Deidentification

./: .gitignore  README.md  pyproject.toml
configs/: sample.yaml
data/: guideline_phi_ner.txt  location297.csv
data/guidelines/: guideline_age.txt  guideline_base.txt  guideline_hospital.txt  guideline_id.txt  guideline_job.txt  guideline_location.txt  guideline_person.txt  guideline_tel.txt
src/deid_pipeline/: cli.py  common.py  config.py  deid_infer.py  merge.py  phi_infer.py  prepare_for_deid.py  runner.py
