[project]
name = "deid-pipeline"
version = "0.1.0"
description = "Two-step PHI tagging and de-identification pipeline"
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.49.1",
    "datasets>=4.4.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "peft>=0.18.1",
    "torch>=2.9.1",
    "transformers>=4.57.5",
    "trl>=0.26.2",
    "pyyaml>=6.0.0",
]

[project.scripts]
deid-pipeline = "deid_pipeline.cli:main"

[tool.uv]
package = true